# FolderSystem

./: CMakeLists.txt  ClonAble.cpp  ClonAble.h  Dir.cpp  Dir.h  DirBuilder.cpp  DirBuilder.h  File.cpp  File.h  FileBuilder.cpp  FileBuilder.h  Menu.cpp  Menu.h  ObjDirector.cpp  ObjDirector.h  Object.cpp  Object.h  ObjectBuilder.cpp  ObjectBuilder.h  PrototypeMaker.cpp  PrototypeMaker.h  Root.cpp  Root.h  ex4 papa-2-2.xml  main.cpp  שחר
